gst-inspect: add pointer mark to signal and action return types that are pointers

When the return type of a signal or action is a pointer, it
should have an asterisk to mark it as such.

https://bugzilla.gnome.org/show_bug.cgi?id=697791